--- a/Project.toml
+++ b/Project.toml
@@ -7,11 +7,17 @@ version = "0.2.5"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 
 [compat]
 GeoInterface = "1.3"
 OrderedCollections = "1"
+REPL = "1.11.0"
+StaticArrays = "1.9.13"
+Tables = "1.12.0"
 XML = "0.3.0"
 julia = "1"
 
