--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,9 @@ authors = ["Josh Day <emailjoshday@gmail.com> and contributors"]
 version = "0.2.5"
 
 [deps]
-AbstractTrees = "1520ce14-60c1-5f80-bbc7-55ef81b5835c"
 Automa = "67c07d97-cdcb-5c2c-af73-a7f9c32a568b"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
-Gumbo = "708ec375-b3d6-5a57-a7ce-8257bf98657a"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 JSON3 = "0f8b85d8-7281-11e9-16c2-39a750bddbf1"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
@@ -20,12 +18,16 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 
+[weakdeps]
+ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
+
+[extensions]
+KMLZipArchivesExt = "ZipArchives"
+
 [compat]
-AbstractTrees = "0.4.5"
 Automa = "1.1.0"
 Downloads = "1.6.0"
 GeoInterface = "1.3"
-Gumbo = "0.8.3"
 JSON3 = "1.14.2"
 OrderedCollections = "1"
 Parsers = "2.8.3"
