--- a/Project.toml
+++ b/Project.toml
@@ -19,10 +19,12 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 
 [weakdeps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 
 [extensions]
 KMLZipArchivesExt = "ZipArchives"
+KMLDataFramesExt = "DataFrames"
 
 [compat]
 Automa = "1.1.0"
