--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.2.5"
 
 [deps]
 Automa = "67c07d97-cdcb-5c2c-af73-a7f9c32a568b"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Downloads = "f43a241f-c20a-4ad4-852c-f6b1247861c6"
 GeoInterface = "cf35fbd7-0cd7-5166-be24-54bfbe79505f"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
@@ -16,6 +17,7 @@ Scratch = "6c6a2e73-6563-6170-7368-637461726353"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+TimeZones = "f269a46b-ccf7-5d73-abea-4c690281aa53"
 XML = "72c71f33-b9b6-44de-8c94-c961784809e2"
 
 [weakdeps]
@@ -23,11 +25,12 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 ZipArchives = "49080126-0e18-4c2a-b176-c102e4b3760c"
 
 [extensions]
-KMLZipArchivesExt = "ZipArchives"
 KMLDataFramesExt = "DataFrames"
+KMLZipArchivesExt = "ZipArchives"
 
 [compat]
 Automa = "1.1.0"
+Dates = "1.11.0"
 Downloads = "1.6.0"
 GeoInterface = "1.3"
 JSON3 = "1.14.2"
@@ -38,6 +41,7 @@ Scratch = "1.2.1"
 Serialization = "1.11.0"
 StaticArrays = "1.9.13"
 Tables = "1.12.0"
+TimeZones = "1.21.3"
 XML = "0.3.0"
 julia = "1"
 
