--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,7 @@ on:
       - main
       - master
 
+# Required permissions for modern Julia CI
 permissions:
   actions: write     # Required for julia-actions/cache
   contents: read     # Basic repository read access
@@ -42,13 +43,16 @@ jobs:
             version: 'pre'
     
     steps:
+      # Update to v4 to avoid Node.js deprecation warnings
       - uses: actions/checkout@v4
         
+      # Update to v2 for modern Julia support
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
           
+      # Use julia-actions/cache for better Julia-specific caching
       - uses: julia-actions/cache@v2
         
       # Build package dependencies
@@ -62,56 +66,36 @@ jobs:
       # Process coverage data
       - uses: julia-actions/julia-processcoverage@v1
         
-      # Upload coverage to Codecov
+      # Upload coverage to Codecov (update to v4)
       - uses: codecov/codecov-action@v4
         with:
           files: lcov.info
-          token: ${{ secrets.CODECOV_TOKEN }}
+          # token: ${{ secrets.CODECOV_TOKEN }} # Not required for public repos
           fail_ci_if_error: false
-          
-      # Upload coverage to Coveralls
-      - uses: coverallsapp/github-action@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          path-to-lcov: lcov.info
-          flag-name: run-${{ matrix.os }}-${{ matrix.version }}
-          parallel: true
 
-  # Finalize Coveralls parallel builds
-  finish:
-    needs: test
-    if: always()
-    runs-on: ubuntu-latest
-    steps:
-      - name: Coveralls Finished
-        uses: coverallsapp/github-action@v2
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          parallel-finished: true
-
-  # Documentation job
-  docs:
-    name: Documentation
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: read
-      statuses: write
-    steps:
-      - uses: actions/checkout@v4
-      - uses: julia-actions/setup-julia@v2
-        with:
-          version: '1'
-      - uses: julia-actions/cache@v2
-      - name: Configure doc environment
-        shell: julia --color=yes --project=docs {0}
-        run: |
-          using Pkg
-          Pkg.develop(PackageSpec(path=pwd()))
-          Pkg.instantiate()
-      - name: Build and deploy documentation
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
-        run: |
-          julia --color=yes --project=docs docs/make.jl
+  # Documentation job - commented out until docs/ folder exists
+  # docs:
+  #   name: Documentation
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: write
+  #     pull-requests: read
+  #     statuses: write
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: julia-actions/setup-julia@v2
+  #       with:
+  #         version: '1'
+  #     - uses: julia-actions/cache@v2
+  #     - name: Configure doc environment
+  #       shell: julia --color=yes --project=docs {0}
+  #       run: |
+  #         using Pkg
+  #         Pkg.develop(PackageSpec(path=pwd()))
+  #         Pkg.instantiate()
+  #     - name: Build and deploy documentation
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
+  #       run: |
+  #         julia --color=yes --project=docs docs/make.jl
