--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -70,7 +70,7 @@ jobs:
       - uses: codecov/codecov-action@v4
         with:
           files: lcov.info
-          # token: ${{ secrets.CODECOV_TOKEN }} # Not required for public repos
+          token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: false
 
   # Documentation job - commented out until docs/ folder exists
